--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(colSample_to_rowSample)
 export(draw_pca)
+export(get_pca_coordinates)
 export(pca_check)
 export(rowSample_to_colSample)
 importFrom(dplyr,all_of)
@@ -46,6 +47,7 @@ importFrom(grDevices,colorRampPalette)
 importFrom(magrittr,"%>%")
 importFrom(patchwork,plot_layout)
 importFrom(stats,cov)
+importFrom(stats,prcomp)
 importFrom(tibble,column_to_rownames)
 importFrom(tibble,rownames_to_column)
 importFrom(utils,combn)
