--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,7 @@ Imports:
     stats,
     utils,
     ropls,
-    scales
+    rlang
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
