--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(colSample_to_rowSample)
 export(create_example_data)
 export(draw_oplsda)
 export(draw_pca)
+export(draw_plsda)
 export(get_pca_coordinates)
 export(pca_check)
 export(rowSample_to_colSample)
